# dbus-ads1115

./: .gitmodules  README.md  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
dbus_ads1115/: dbus_ads1115.py  settingsdevice.py  ve_utils.py  vedbus.py
src/dbus_ads1115/: dbus_ads1115.py  settingsdevice.py  vedbus.py
tests/: test_dbus_ads1115.py
tests/mock/: mock_dbus_service.py  mock_gobject.py  mock_settings_device.py
