[metadata]
name = dbus_ads1115
description = Add sensors like tank, temperature, current or voltage 
author = Eicke Hecht
license = GNU General Public License v3.0
license_files = LICENSE
platforms = linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    dbus_ads1115
install_requires =
    pyyaml>=6
    dbus-python>=1
    pgi>=0.0.11
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
dbus_ads1115 = py.typed

[flake8]
max-line-length = 160