[metadata]
name = dbus_ads1115
description = Add sensors like tank, temperature, current or voltage 
long_description = file: README.md
author = Eicke Hecht
license = GNU General Public License v3.0
license_files = LICENSE
platforms = linux
version = 0.1
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    dbus_ads1115
    dbus_ads1115.mock
install_requires =
    pyyaml>=6
    dbus-python>=1
    pycairo>=1
    PyGObject>=3.42
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
dbus_ads1115 = py.typed

[flake8]
max-line-length = 160
ignore = E402
exclude = src/dbus_ads1115/ext/*

[tool:pytest]
norecursedirs = src/dbus_ads1115/ext/*

